--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <h1>Bem-vindo ao Meu Site</h1>
 <nav>
     <ul>
-       <li><a href="Casinha">Casinha</a></li>
-       <li><a href="Sobre">Sobre</a></li>
-       <li><a href="Contato">Contato</a></li>
+       <li><a href="Casinha.html">Casinha</a></li>
+       <li><a href="Sobre.html">Sobre</a></li>
+       <li><a href="Contato.html">Contato</a></li>
     </ul>
    </nav>
    <section id="Casinha">
